--- a/server/html/index.html
+++ b/server/html/index.html
@@ -2,10 +2,14 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<title>Judge Dash</title>
+<title>Judge Hypex [Night]</title>
 <link rel="stylesheet" href="http://necolas.github.com/normalize.css/3.0.1/normalize.css">
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/monokai.min.css">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/judge/css/blk.css">
+<link rel="stylesheet" href="/judge/css/test.css">
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
 <script type="text/javascript">
 'use strict'
 
@@ -17,7 +21,11 @@ $(document).ready(function(){
 	var req = new XMLHttpRequest();
 	var pkg = $('#pkg')[0].files[0];
 	var j_bar = $('#prog > .bar');
+	var j_result = $('#result');
+	var j_result_gear = $('#result-gear');
 
+	j_result.hide();
+	j_result_gear.show();
 	$.ajax({
 	    'url':'/judge/api/' + api_key + '/add_pkg',
 	    'type':'POST',
@@ -34,27 +42,95 @@ $(document).ready(function(){
 		return xhr;
 	    },
 	    'success':function(res){
-		console.log(res);
+		j_result_gear.hide();
+		j_result.text(JSON.stringify(res,null,'  '));
+		hljs.highlightBlock(j_result[0]);
+		j_result.show();
 	    },
 	});
+    });
+
+    $.get('/judge/api/' + api_key + '/get_state',function(res){
+	var i;
+	var table;
+	var nodes;
+	var bind;
+	var live;
+	var j_list = $('#nodestate > tbody');
+	var j_tr;
+	var j_td;
+
+	table = {};
+	for(i = 0;i < res.node.length;i++){
+	    nodes = res.node[res.node.length - i - 1];
+	    for(bind in nodes){
+		if(table[bind] == undefined){
+		    table[bind] = [];
+		}
+		table[bind][i] = nodes[bind].live;
+	    }
+	}
+	for(bind in table){
+	    j_tr = $('<tr><td class="bind"></td></tr>')
+	    j_tr.find('td.bind').text(bind);
+	    for(i = 0;i < res.node.length;i++){
+		live = table[bind][i];
+		if(live == undefined){
+		    live = false;   
+		}
+		j_td = $('<td></td>');
+		if(live == true){
+		    j_td.addClass('on');
+		}else{
+		    j_td.addClass('off');
+		}
+		j_tr.append(j_td);
+	    }
+	    j_list.append(j_tr);
+	}
     });
 });
 </script>
 </head>
 <body>
-<div class="container nav">
+<div id="nav" class="container nav">
     <a>Judge</a>
     <ul>
-	<li><a>Test</a></li>
+	<li><a class="test active">實驗</a></li>
+	<li><a class="night">空白</a></li>
     </ul>
 </div>
 
 <div class="container" style="margin-top:32px;">
-    <div class="g-r"><div class="g-md-3 blk-cont">
-	<input id="pkg" type="file" name="pkg">
-	<div id="prog" class="blk-prog"><div class="bar"></div></div>
-	<button id="upload" class="btn-def">Upload</button>
-    </div></div>
+    <div class="g-r">
+	<div class="g-md-3">
+	    <div class="blk-cont blk-plant">
+		<h4>上傳包裹</h4>
+		<input id="pkg" type="file" name="pkg">
+		<div id="prog" class="blk-prog"><div class="bar"></div></div><br>
+		<button id="upload" class="btn-pri">Upload</button>
+	    </div>
+	    <div class="blk-cont blk-plant" style="margin-top:16px;">
+		<h4>回傳值</h4>
+		<pre><code id="result" class="json" style="display:none;"></code></pre>
+		<div id="result-gear"class="gear" style="margin-top:-32px; display:none;"><div></div></div>
+	    </div>
+	</div>
+	<div class="g-md-4"><div class="blk-cont blk-plant">
+	    <h4>節點狀態</h4>
+	    <table id="nodestate">
+		<thead>
+		    <tr>
+			<th>位置</th>
+			<th>15m</th>
+			<th>10m</th>
+			<th>5m</th>
+		    </tr>
+		</thead>
+		<tbody></tbody>
+	    </table>
+	</div></div>
+    </div>
 </div>
 </body>
 </html>
